updated Swagger subsidy definition
