# python-flask-server/swagger_server/models/subsidy_base.py
@@ -18,7 +18,7 @@ class SubsidyBase(Model):
     Do not edit the class manually.
     """
 
-    def __init__(self, id: str=None, name: str=None, master: MasterAccountBase=None, recipient: CitizenBase=None, account: AccountBase=None, frequency: str=None, amount: float=None, expiry: datetime=None):  # noqa: E501
+    def __init__(self, id: str=None, name: str=None, master: MasterAccountBase=None, recipient: CitizenBase=None, account: AccountBase=None, frequency: str=None, amount: float=None, startdate: date=None, enddate: date=None, comment: str=None):  # noqa: E501
         """SubsidyBase - a model defined in Swagger
 
         :param id: The id of this SubsidyBase.  # noqa: E501
@@ -35,8 +35,12 @@ class SubsidyBase(Model):
         :type frequency: str
         :param amount: The amount of this SubsidyBase.  # noqa: E501
         :type amount: float
-        :param expiry: The expiry of this SubsidyBase.  # noqa: E501
-        :type expiry: datetime
+        :param startdate: The startdate of this SubsidyBase.  # noqa: E501
+        :type startdate: date
+        :param enddate: The enddate of this SubsidyBase.  # noqa: E501
+        :type enddate: date
+        :param comment: The comment of this SubsidyBase.  # noqa: E501
+        :type comment: str
         """
         self.swagger_types = {
             'id': str,
@@ -46,7 +50,9 @@ class SubsidyBase(Model):
             'account': AccountBase,
             'frequency': str,
             'amount': float,
-            'expiry': datetime
+            'startdate': date,
+            'enddate': date,
+            'comment': str
         }
 
         self.attribute_map = {
@@ -57,7 +63,9 @@ class SubsidyBase(Model):
             'account': 'account',
             'frequency': 'frequency',
             'amount': 'amount',
-            'expiry': 'expiry'
+            'startdate': 'startdate',
+            'enddate': 'enddate',
+            'comment': 'comment'
         }
 
         self._id = id
@@ -67,7 +75,9 @@ class SubsidyBase(Model):
         self._account = account
         self._frequency = frequency
         self._amount = amount
-        self._expiry = expiry
+        self._startdate = startdate
+        self._enddate = enddate
+        self._comment = comment
 
     @classmethod
     def from_dict(cls, dikt) -> 'SubsidyBase':
@@ -230,22 +240,64 @@ class SubsidyBase(Model):
         self._amount = amount
 
     @property
-    def expiry(self) -> datetime:
-        """Gets the expiry of this SubsidyBase.
+    def startdate(self) -> date:
+        """Gets the startdate of this SubsidyBase.
 
 
-        :return: The expiry of this SubsidyBase.
-        :rtype: datetime
+        :return: The startdate of this SubsidyBase.
+        :rtype: date
         """
-        return self._expiry
+        return self._startdate
 
-    @expiry.setter
-    def expiry(self, expiry: datetime):
-        """Sets the expiry of this SubsidyBase.
+    @startdate.setter
+    def startdate(self, startdate: date):
+        """Sets the startdate of this SubsidyBase.
 
 
-        :param expiry: The expiry of this SubsidyBase.
-        :type expiry: datetime
+        :param startdate: The startdate of this SubsidyBase.
+        :type startdate: date
         """
 
-        self._expiry = expiry
+        self._startdate = startdate
+
+    @property
+    def enddate(self) -> date:
+        """Gets the enddate of this SubsidyBase.
+
+
+        :return: The enddate of this SubsidyBase.
+        :rtype: date
+        """
+        return self._enddate
+
+    @enddate.setter
+    def enddate(self, enddate: date):
+        """Sets the enddate of this SubsidyBase.
+
+
+        :param enddate: The enddate of this SubsidyBase.
+        :type enddate: date
+        """
+
+        self._enddate = enddate
+
+    @property
+    def comment(self) -> str:
+        """Gets the comment of this SubsidyBase.
+
+
+        :return: The comment of this SubsidyBase.
+        :rtype: str
+        """
+        return self._comment
+
+    @comment.setter
+    def comment(self, comment: str):
+        """Sets the comment of this SubsidyBase.
+
+
+        :param comment: The comment of this SubsidyBase.
+        :type comment: str
+        """
+
+        self._comment = comment
